--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="cs">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
-    </main>
-	<script src="index.js"></script>
-  </body>
-</html>
+    <title>Můj osobní blog</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            display: flex;
+        }
+        .menu {
+            background-color: #f4f4f4;
+            padding: 20px;
+            width: 200px;
+        }
+        .menu ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        .menu li {
+            margin-bottom: 10px;
+        }
+        .menu li a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+        }
+        .content {
+            padding: 20px;
+            flex: 1;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <div class="menu">
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="#about">O mně</a></li>
+            <li><a href="#news">Novinky</a></li>
+            <li><a href="#gallery">Fotogalerie</a></li>
+            <li><a href="#projects">Projekty</a></li>
+        </ul>
+    </div>
+    <div
 
